@@ -1,5 +1,6 @@
 Changes for 1.7.0
 
+ - [DEV-397] added notification macros {EVENT.ACK.STATUS} and {EVENT.ACK.HISTORY} (Sasha)
  - [DEV-405] Proxies, Nodes moved under "Administration->DM" (Artem)
  - [DEV-405] Items, Triggers, Graphs moved under "Configuration->Hosts" (Artem)
  - [DEV-405] Host Groups, Maintenancess moved under "Configuration" (Artem)
